test/assets/invalid/application/remove-only-param.hs
a :: String -> Char
a = head 1